# ProjectES

./: .gitignore  AutoProgram  AutoProgram.vbs  CMakeLists.txt  FW  README.md  splintOut.txt
CubeMX/: .mxproject  CubeMX.ioc
CubeMX/Inc/: dcmi.h  dma2d.h  fatfs_platform.h  ffconf.h  fmc.h  i2c.h  ltdc.h  main.h  sai.h  sdmmc.h  spdifrx.h  spi.h  stm32f7xx_hal_conf.h  tim.h  usart.h
CubeMX/SW4STM32/CubeMX/: .cproject  .project
CubeMX/Src/: adc.c  bsp_driver_sd.c  dcmi.c  ethernetif.c  fatfs.c  fatfs_platform.c  fmc.c  gpio.c  i2c.c  ltdc.c  main.c  quadspi.c  rtc.c  sai.c  sdmmc.c  spdifrx.c  spi.c  tim.c  usart.c
bsp/: stm32746g_discovery.h  stm32746g_discovery_audio.h  stm32746g_discovery_camera.h  stm32746g_discovery_lcd.c  stm32746g_discovery_lcd.h  stm32746g_discovery_qspi.h  stm32746g_discovery_sdram.h  stm32746g_discovery_ts.h
cubemx/: .cproject  .mxproject  .project  Project.ioc  Project.txt  cubemx.ioc
cubemx/Drivers/STM32F7xx_HAL_Driver/Inc/: stm32f7xx_hal_i2c.h
cubemx/Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal_hcd.c  stm32f7xx_hal_i2c.c  stm32f7xx_hal_tim.c
cubemx/Inc/: FreeRTOSConfig.h  adc.h  dcmi.h  dma2d.h  fatfs.h  fatfs_platform.h  ffconf.h  fmc.h  gpio.h  i2c.h  ltdc.h  lwipopts.h  main.h  quadspi.h  rng.h  rtc.h  sai.h  sdmmc.h  spdifrx.h  spi.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  tim.h  usart.h  usb_host.h  usb_otg_hs.h  usbh_conf.h  usbh_platform.h
cubemx/Middlewares/ST/STM32_USB_Host_Library/Core/Src/: usbh_core.c
cubemx/Project/: .cproject  .mxproject  .project  Project.ioc
cubemx/Project/Inc/: bsp_driver_sd.h  main.h  stm32f7xx_hal_conf.h  usb_host.h
cubemx/Project/Src/: bsp_driver_sd.c  main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c  usb_host.c  usbh_conf.c
cubemx/Src/: adc.c  bsp_driver_sd.c  dcmi.c  ethernetif.c  fatfs.c  fatfs_platform.c  fmc.c  freertos.c  gpio.c  i2c.c  ltdc.c  lwip.c  main.c  quadspi.c  rtc.c  sai.c  sdmmc.c  spdifrx.c  spi.c  stm32f7xx_hal_msp.c  stm32f7xx_hal_timebase_TIM.c  stm32f7xx_it.c  tim.c  usart.c  usb_host.c  usb_otg_hs.c  usbh_conf.c  usbh_platform.c
hal/: hal.h  stm32f7xx_hal_conf.h  stm32f7xx_hal_def.h  stm32f7xx_hal_uart.h
scrap/: FreeRTOSConfig.h  demo_LCD.c  ffconf.h  os.c  os.h  state_machine.c  state_machine.h  usb.c
src/: FreeRTOSConfig.h  app.c  app.h  app_main.c  app_main.h  color.c  color.h  config.c  config.h  ffconf.h  ini.h  log.c  log.h  main.c  main.h  net.c  net.h  syscall.c  syscalls.c  temp.c  temp.h  tmp.c  tmp.h
